# gmm_np

./: README.md  setup.cfg
config/: config.yaml
config/experiment/: LineSine1D_64_16.yaml  Sinusoid1D_64_16.yaml
config/experiment/base/: evaluation.yaml  plotting.yaml
config/model/: GMMNP-LineSine1D_64_16.yaml  GMMNP-Sinusoid1D_64_16.yaml
config/model/base/: gmm_np.yaml
scripts/: run_experiment.ipynb
src/eval_util/: util.py
src/experiment_util/: __init__.py  eval_single_run.py  experiment_data.py  metalearning_distributions.py  metalearning_model.py  plotting.py
src/gmm_util/: gmm.py  util.py
src/metalearning_benchmarks/: __init__.py  line_sine1d_benchmark.py  metalearning_benchmark.py  metalearning_task.py  parametric_benchmark.py  sinusoid1d_benchmark.py  util.py
src/metalearning_model_gmm_np/: decoder.py  metalearning_gmm.py  mm_gmm_np.py  model_learner.py  np.py  posterior_learner.py  subtask_generator.py  util.py
src/multi_daft_vi/: multi_daft_vi.py  multi_more.py
