[metadata]
name = gmm_np_iclr2023 
description = Source code accompanying the ICLR2023 submission "Accurate Bayesian Meta Learning by Accurate Task Posterior Inference"
author = anonymous
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
install_requires =
    ipykernel
    numpy
    scipy
    tensorflow
    tensorflow-probability
    tf_agents
    tqdm
    hydra-core
    omegaconf
    pandas
    seaborn
python_requires = >=3.10
package_dir =
    =src
packages =
    eval_util
    experiment_util
    gmm_util
    metalearning_benchmarks
    multi_daft_vi
    metalearning_model_gmm_np